--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,10 @@
 name: "Urouge"
 description: "Urouge"
-url: "http://urouge.github.io"
+url: "http://urouge.github.io/"
 paginate: 10
 markdown: rdiscount
 permalink: /:title/
 pygments: true
 safe: true
 auto: true
+duoshuo: urouge
